--- a/solution/base/config.properties
+++ b/solution/base/config.properties
@@ -1,3 +1,3 @@
   BG_COLOR=#12181b
   FONT_COLOR=#FFFFFF
-  CUSTOM_HEADER=welcome to the prod environment
+  CUSTOM_HEADER=welcome to the base environment
