--- a/solution/base/kustomization.yaml
+++ b/solution/base/kustomization.yaml
@@ -1,4 +1,5 @@
-
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources: 
 - deployment.yaml
 - service.yaml
@@ -17,4 +18,5 @@ nameSuffix:
 
 configMapGenerator:
 - name: mykustom-map
-  env: config.properties
+  envs: 
+  - config.properties
