added finalizers, auto prune and selfHeal

--- a/argocd/argocd-app-webapp.yaml
+++ b/argocd/argocd-app-webapp.yaml
@@ -3,6 +3,15 @@ kind: Application
 metadata:
   name: webapp-argo 
   namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
+  labels:
+    app.kubernetes.io/instance: webapp-argo
+    app.kubernetes.io/managed-by: argocd
+    app.kubernetes.io/name: webapp-argo
+    app.kubernetes.io/part-of: argocd
+    app.kubernetes.io/version: v1.0.0
+    argocd.argoproj.io/sync-wave: "0"
 spec:
   destination:
     namespace: default
@@ -15,3 +24,10 @@ spec:
     path: helm-chart/webapp
     repoURL: https://github.com/victorbecerragit/mykustomapp.git
     targetRevision: HEAD
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
+    - PruneLast=true
